<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddNoteFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="55dp"
            android:layout_height="?android:attr/actionBarSize"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_icon"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/add_a_note"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton

            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/saveNoteButton"
            android:contentDescription="@string/save_button"
            android:src="@drawable/check_icon"
            tools:ignore="RedundantDescriptionCheck"
            tools:layout_editor_absoluteX="335dp"
            tools:layout_editor_absoluteY="5dp" />

    </androidx.appcompat.widget.Toolbar>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/title"
        android:maxLength="64"
        android:textColorHint="#FFAABBCC"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

        <androidx.appcompat.widget.AppCompatEditText
            android:padding="10dp"
            android:id="@+id/editTextNote"
            android:layout_width="match_parent"
            android:layout_marginTop="14dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_your_note_here"
            android:textColorHint="#FFAABBCC"
            android:textSize="22sp"
            android:textColor="@color/white"/>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>